tests/typing/bad/testfile-tuple-2.rs


fn main() {
    let x = (1u32, 3i32);

    let y = x.2;
}